--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>RxjsPractice</title>
   <base href="/">
 
+  <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyB9rshnUA1GKQbq5c-sauCcgX4vELAZP-Y",
+      authDomain: "parkingapp2-c8b26.firebaseapp.com",
+      databaseURL: "https://parkingapp2-c8b26.firebaseio.com",
+      storageBucket: "parkingapp2-c8b26.appspot.com",
+      messagingSenderId: "28311343107"
+    };
+    firebase.initializeApp(config);
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
